syntax = "proto3";

package substantial.protos.events;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message Start {
  google.protobuf.Struct kwargs = 1;
}

message SaveResolved {
  string json_result = 1;
}

message SaveRetry {
  google.protobuf.Timestamp wait_until = 1;
  int32 counter = 2;
}

message SaveFailed {
  string err = 1;
}

message Save {
  uint32 id = 1;
  oneof of {
    SaveResolved resolved = 10;
    SaveRetry retry = 11;
    SaveFailed failed = 12;
  }
}

message Sleep {
  uint32 id = 1;
  google.protobuf.Timestamp start = 2;
  google.protobuf.Timestamp end = 3;
}

message Send {
  string name = 1;
  string value = 2;
}

message Stop {
  oneof result {
    string ok = 1;
    string err = 2;
  }
}

message Event {
  google.protobuf.Timestamp at = 1;
  oneof of {
    Start start = 10;
    Save save = 11;
    Sleep sleep = 12;
    Send send = 13;
    Stop stop = 14;
  }
};

message Records {
  string run_id = 1;
  repeated Event events = 2;
}
